<resources>
    <string name="app_name">Celebrities</string>

    <string name="home_title_popular">Popular</string>
    <string name="home_title_explore">Explore</string>
    <string name="home_title_most_appearance">Most Appearance</string>


    <string name="snackbar_dismiss">Dismiss</string>
    <string name="snackbar_retry">Retry</string>

    <string name="error_unknown">Unknown Error</string>
    <string name="error_format">Error (%1$d): %2$s</string>

    <string name="explore_search_title">Search</string>
    <string name="explore_type_in_search">Insert a person name</string>
    <string name="explore_no_result">Sorry, There is no result matching your query</string>
    <string name="most_appearance_no_result">Sorry, There is no person has more than one appearance on top 20 movies</string>

    <string name="personal_details_title">Details</string>
    <string name="personal_details_info">Info</string>
    <string name="personal_details_place_of_birth">Place of Birth</string>
    <string name="personal_details_birthday">Birthday</string>
    <string name="personal_details_deathday">Death Day</string>
    <string name="personal_details_photos">Photos</string>
    <string name="personal_details_place_of_birth_unknown">Unknown</string>

    <string name="personal_photo_title">Photo</string>
    <string name="personal_photo_download_title">Download</string>
    <string name="personal_photo_photo_downloaded">Photo Saved Successfully</string>
    <string name="personal_photo_error_downloading">Sorry, there is an error in downloading photo</string>
    <string name="personal_photo_error_saving">Sorry, there is an error in saving photo</string>

    <string name="permission_write_external_title">Write in External Storage Permission</string>
    <string name="permission_write_external_description">This permission is required to save your downloaded file in your device</string>
    <string name="permission_write_external_denied">You can\'t download a file until you allow External Storage Permission</string>


</resources>
